--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,106 @@
-h1 {
-  color: red;
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+}
+
+header {
+  padding: 1rem;
+  text-align: center;
+  background-color: #e6e4e260;
+}
+
+header img {
+  margin-top: 1.25rem;
+  max-width: 300px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+  background-color: #fff;
+  margin: 0.2rem;
+  padding: 0.5rem 1rem;
+}
+
+header a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+header p {
+  font-weight: 300;
+  word-spacing: 0.1rem;
+  line-height: 1.25rem;
+}
+
+.portfolio {
+  max-width: 100%;
+  margin: 1rem;
+  text-align: center;
+}
+
+.portfolio img {
+  max-width: 100%;
+}
+
+.portfolio h3 {
+  text-transform: uppercase;
+  margin: 2.5rem 0;
+}
+
+.portfolio h2 {
+  margin-top: 2rem;
+}
+
+.portfolio p {
+  margin-bottom: 2rem;
+  font-weight: 300;
+}
+
+footer {
+  text-align: center;
+  background-color: #e6e4e260;
+  padding: 0.2rem 1rem;
+}
+
+footer .title {
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-top: 3rem;
+}
+
+footer p {
+  font-weight: 300;
+  margin: 1.25rem 0;
+}
+
+footer .contact-info {
+  margin-left: 1rem;
+  font-weight: 700;
+}
+
+footer .bottom-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
+
+footer .bottom-footer p {
+  font-weight: 700;
+  margin-right: auto;
+}
+
+footer .bottom-footer a {
+  text-decoration: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #000;
 }
