--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ header p {
 }
 
 .portfolio {
-  max-width: 100%;
   margin: 1rem;
   text-align: center;
 }
@@ -87,6 +86,7 @@ footer .contact-info {
 }
 
 footer .bottom-footer {
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -103,4 +103,81 @@ footer .bottom-footer a {
   font-weight: 700;
   text-transform: uppercase;
   color: #000;
+}
+
+footer .bottom-footer .desktop-link {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .header-col {
+    flex: 1;
+  }
+
+  .header-col-1 {
+    flex: 1 100%;
+  }
+
+  .header-col-2 {
+    flex: 1 100%;
+  }
+
+  .header-col-4 {
+    max-width: 60%;
+    text-align: start;
+    align-self: center;
+  }
+
+  .header-col-3 {
+    order: 1;
+    align-self: center;
+    margin-left: auto;
+  }
+
+  header ul {
+    display: flex;
+    justify-content: center;
+  }
+
+  header ul li {
+    background-color: rgba(100, 100, 100, 0);
+  }
+
+  .portfolio {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .col {
+    flex: 1 50%;
+    padding: 0.3rem;
+    margin-bottom: 1rem;
+  }
+
+  .item-1 {
+    flex-basis: 100%;
+  }
+
+  .col p {
+    padding: 0 1.75rem;
+  }
+
+  footer .bottom-footer a {
+    margin: 1rem;
+    margin-right: 0;
+  }
+
+  footer .bottom-footer .desktop-link {
+    display: inline;
+  }
+
+  footer .bottom-footer #mobile-link {
+    display: none;
+  }
 }
