--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header {
 
 header img {
   margin-top: 1.25rem;
-  max-width: 300px;
+  max-width: 35%;
 }
 
 ul {
@@ -170,6 +170,21 @@ footer .bottom-footer .desktop-link {
     padding: 0 1.75rem;
   }
 
+  footer {
+    padding-right: 2rem;
+    padding-left: 2rem;
+  }
+
+  footer .description {
+    padding-right: 20%;
+    padding-left: 20%;
+    margin: 2.25rem 0;
+  }
+
+  hr {
+    margin-top: 3.25rem;
+  }
+
   footer .bottom-footer a {
     margin: 1rem;
     margin-right: 0;
@@ -181,5 +196,59 @@ footer .bottom-footer .desktop-link {
 
   footer .bottom-footer #mobile-link {
     display: none;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header .header-col-1,
+  header .header-col-2 {
+    flex: 1 50%;
+  }
+
+  header .header-col-1 {
+    text-align: start;
+    padding-bottom: 1rem;
+  }
+
+  header .header-col-2 {
+    align-self: center;
+    padding-bottom: 1rem;
+  }
+
+  header .header-col-2 ul {
+    justify-content: flex-end;
+  }
+
+  header .header-col-3 {
+    flex: 1 50%;
+  }
+
+  header .header-col-3 {
+    margin-right: 0px;
+    margin-left: auto;
+  }
+
+  header .header-col-4 {
+    padding: 5.5rem;
+    padding-left: 0;
+    padding-top: 0;
+  }
+
+  .col {
+    flex: 1 33.3%;
+  }
+
+  .item-1 {
+    flex-basis: 100%;
+  }
+
+  .description {
+    padding: 1rem 22%;
+    margin: 0;
+  }
+
+  footer {
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
   }
 }
